--- a/starship.toml
+++ b/starship.toml
@@ -21,12 +21,13 @@ $nim\
 $rust\
 $scala\
 $python\
-$conda\
 [](fg:#24273a bg:#06969A)\
 $docker_context\
 [](fg:#06969A bg:#24273a)\
 $time\
-[ ](fg:#24273a)
+[ ](fg:#24273a)\
+$conda\
+$cmd_duration
 $character
 """
 
@@ -46,11 +47,14 @@ style_root = "bg:#1e2030"
 format = '[$user ]($style)'
 disabled = false
 
+[cmd_duration]
+min_time = 500
+format = 'took [$duration](bold yellow)'
 # An alternative to the username module which displays a symbol that
 # represents the current operating system
 [os]
 style = "bg:#9A348E"
-disabled = true # Disabled by default
+disabled = true# Disabled by default
 
 [directory]
 style = "bg:#363a4f"
@@ -58,28 +62,20 @@ format = "[ $path ]($style)"
 truncation_length = 3
 truncation_symbol = "…/"
 
-# Here is how you can shorten some long paths by text replacement
-# similar to mapped_locations in Oh My Posh:
-# [directory.substitutions]
-# "Documents" = "󰈙 "
-# "Downloads" = " "
-# "Music" = " "
-# "Pictures" = " "
-# Keep in mind that the order matters. For example:
-# "Important Documents" = " 󰈙 "
-# will not be replaced, because "Documents" was already substituted before.
-# So either put "Important Documents" before "Documents" or use the substituted version:
-# "Important 󰈙 " = " 󰈙 "
-
 [c]
 symbol = " "
 style = "bg:#24273a"
 format = '[ $symbol ($version) ]($style)'
 
 [conda]
-symbol = ""
-style = "fg:#a6da95 bg:#24273a"
-format = '[$symbol$environment]($style) '
+symbol = ""
+style = "fg:#a6da95"
+format = '[$symbol $environment]($style) '
+
+[localip]
+ssh_only = false
+format = '@[$localipv4](bold red) '
+disabled = false
 
 [docker_context]
 symbol = " "
@@ -150,9 +146,9 @@ style = "bg:#24273a"
 format = '[ $symbol ($version) ]($style)'
 
 [python]
-symbol = "🐍"
+symbol = ""
 style = "bg:#24273a"
-format = '[ $symbol]($style)'
+format = '[$symbol ($version) ${conda}]($style)'
 
 [time]
 disabled = false
