better tmux vonf

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,17 +16,89 @@ set-option -g renumber-windows on
 bind -n M-H previous-window
 bind -n M-L next-window
 
-# Set theme options
+# Define Theme
 set -g @catppuccin_flavour 'mocha' # latte, frappe, macchiato, mocha
-set -g @catppuccin_date_time "%Y-%m-%d %H:%M"
-set -g @catppuccin_user "on"
-set -g @catppuccin_window_tabs_enabled off # or off to disable window_tabs
+###############################################################################
+
+# CONFIG perso
+# set -g @catppuccin_date_time "%Y-%m-%d %H:%M"
+# set -g @catppuccin_host "on"
+# set -g @catppuccin_user "on"
+# set -g @catppuccin_window_tabs_enabled off # or off to disable window_tabs
+# set -g @catppuccin_status_right_separator " "
+# set -g @catppuccin_status_left_separator " "
+
+###############################################################################
+# Config 1
+set -g @catppuccin_window_right_separator "█ "
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_middle_separator " | "
+
+set -g @catppuccin_window_default_fill "none"
+
+set -g @catppuccin_window_current_fill "all"
+
+set -g @catppuccin_status_modules_right "application session user host date_time"
+set -g @catppuccin_status_left_separator  ""
+set -g @catppuccin_status_right_separator " "
+
+set -g @catppuccin_status_right_separator_inverse "no"
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+
+set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
+
+###############################################################################
+# Config 2
+# set -g @catppuccin_window_left_separator "█"
+# set -g @catppuccin_window_right_separator "█ "
+# set -g @catppuccin_window_number_position "right"
+# set -g @catppuccin_window_middle_separator "  █"
+#
+# set -g @catppuccin_window_default_fill "number"
+#
+# set -g @catppuccin_window_current_fill "number"
+# set -g @catppuccin_window_current_text "#{pane_current_path}"
+#
+# set -g @catppuccin_status_modules_right "application session date_time"
+# set -g @catppuccin_status_left_separator  ""
+# set -g @catppuccin_status_right_separator " "
+# set -g @catppuccin_status_right_separator_inverse "yes"
+# set -g @catppuccin_status_fill "all"
+# set -g @catppuccin_status_connect_separator "no"
+
+###############################################################################
+# CONFIG 3
+# set -g @catppuccin_window_left_separator ""
+# set -g @catppuccin_window_right_separator " "
+# set -g @catppuccin_window_middle_separator " █"
+# set -g @catppuccin_window_number_position "right"
+#
+# set -g @catppuccin_window_default_fill "number"
+# set -g @catppuccin_window_default_text "#W"
+#
+# set -g @catppuccin_window_current_fill "number"
+# set -g @catppuccin_window_current_text "#W"
+#
+# set -g @catppuccin_status_modules_right "directory user host session"
+# set -g @catppuccin_status_left_separator  " "
+# set -g @catppuccin_status_right_separator ""
+#
+# set -g @catppuccin_status_right_separator_inverse "no"
+# set -g @catppuccin_status_fill "icon"
+# set -g @catppuccin_status_connect_separator "no"
+#
+# set -g @catppuccin_directory_text "#{pane_current_path}"
+
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 # set vi-mode
 set-window-option -g mode-keys vi
@@ -38,11 +110,9 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 # open panes same panel
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
+
+# Automatic save and restore
+set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
