--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -54,7 +54,7 @@ format = 'took [$duration](bold yellow)'
 # represents the current operating system
 [os]
 style = "bg:#9A348E"
-disabled = true# Disabled by default
+disabled = true      # Disabled by default
 
 [directory]
 style = "bg:#363a4f"
@@ -148,10 +148,10 @@ format = '[ $symbol ($version) ]($style)'
 [python]
 symbol = ""
 style = "bg:#24273a"
-format = '[$symbol ($version) ${conda}]($style)'
+format = '[$symbol \[$version\] $virtualenv]($style)'
 
 [time]
 disabled = false
-time_format = "%R" # Hour:Minute Format
+time_format = "%R"           # Hour:Minute Format
 style = "bg:#24273a"
 format = '[ $time ]($style)'
