--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -53,8 +53,8 @@ format = 'took [$duration](bold yellow)'
 # An alternative to the username module which displays a symbol that
 # represents the current operating system
 [os]
-style = "bg:#9A348E"
-disabled = true      # Disabled by default
+style = "bg:#1e2030"
+disabled = false     # Disabled by default
 
 [directory]
 style = "bg:#363a4f"
