--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,6 +16,12 @@ set-option -g renumber-windows on
 bind -n M-H previous-window
 bind -n M-L next-window
 
+set -g focus-events on
+set -g status-style bg=default
+set -g status-left-length 90
+set -g status-right-length 90
+set -g status-justify centre
+
 # Define Theme
 set -g @catppuccin_flavour 'mocha' # latte, frappe, macchiato, mocha
 ###############################################################################
@@ -106,6 +112,10 @@ set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+
+#Reload tmux
+unbind r
+bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "reloaded"
 
 # open panes same panel
 bind '"' split-window -c "#{pane_current_path}"
