chore: import bosch config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -22,89 +22,21 @@ set -g status-left-length 90
 set -g status-right-length 90
 set -g status-justify centre
 
-# Define Theme
-set -g @catppuccin_flavour 'mocha' # latte, frappe, macchiato, mocha
-###############################################################################
-
-# CONFIG perso
-# set -g @catppuccin_date_time "%Y-%m-%d %H:%M"
-# set -g @catppuccin_host "on"
-# set -g @catppuccin_user "on"
-# set -g @catppuccin_window_tabs_enabled off # or off to disable window_tabs
-# set -g @catppuccin_status_right_separator " "
-# set -g @catppuccin_status_left_separator " "
-
-###############################################################################
-# Config 1
-set -g @catppuccin_window_right_separator "█ "
-set -g @catppuccin_window_number_position "right"
-set -g @catppuccin_window_middle_separator " | "
-
-set -g @catppuccin_window_default_fill "none"
-
-set -g @catppuccin_window_current_fill "all"
-
-set -g @catppuccin_status_modules_right "application session user host date_time"
-set -g @catppuccin_status_left_separator  ""
-set -g @catppuccin_status_right_separator " "
-
-set -g @catppuccin_status_right_separator_inverse "no"
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-
-set -g @catppuccin_date_time_text "%Y-%m-%d %H:%M:%S"
-
-###############################################################################
-# Config 2
-# set -g @catppuccin_window_left_separator "█"
-# set -g @catppuccin_window_right_separator "█ "
-# set -g @catppuccin_window_number_position "right"
-# set -g @catppuccin_window_middle_separator "  █"
-#
-# set -g @catppuccin_window_default_fill "number"
-#
-# set -g @catppuccin_window_current_fill "number"
-# set -g @catppuccin_window_current_text "#{pane_current_path}"
-#
-# set -g @catppuccin_status_modules_right "application session date_time"
-# set -g @catppuccin_status_left_separator  ""
-# set -g @catppuccin_status_right_separator " "
-# set -g @catppuccin_status_right_separator_inverse "yes"
-# set -g @catppuccin_status_fill "all"
-# set -g @catppuccin_status_connect_separator "no"
-
-###############################################################################
-# CONFIG 3
-# set -g @catppuccin_window_left_separator ""
-# set -g @catppuccin_window_right_separator " "
-# set -g @catppuccin_window_middle_separator " █"
-# set -g @catppuccin_window_number_position "right"
-#
-# set -g @catppuccin_window_default_fill "number"
-# set -g @catppuccin_window_default_text "#W"
-#
-# set -g @catppuccin_window_current_fill "number"
-# set -g @catppuccin_window_current_text "#W"
-#
-# set -g @catppuccin_status_modules_right "directory user host session"
-# set -g @catppuccin_status_left_separator  " "
-# set -g @catppuccin_status_right_separator ""
-#
-# set -g @catppuccin_status_right_separator_inverse "no"
-# set -g @catppuccin_status_fill "icon"
-# set -g @catppuccin_status_connect_separator "no"
-#
-# set -g @catppuccin_directory_text "#{pane_current_path}"
-
+set -g @rose_pine_variant 'dawn' # Options are 'main', 'moon' or 'dawn'
+set -g @rose_pine_host 'on' # Enables hostname in the status bar
+set -g @rose_pine_date_time '%Y-%m-%d %H:%M' # It accepts the date UNIX command format (man date for info)
+set -g @rose_pine_user 'on' # Turn on the username component in the statusbar
+set -g @rose_pine_directory 'on' # Turn on the current folder component in the status bar
+set -g @rose_pine_bar_bg_disable 'on' # Disables background color, for transparent terminal emulators
+set -g @rose_pine_bar_bg_disabled_color_option 'default'
 
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'rose-pine/tmux'
 
 # set vi-mode
 set-window-option -g mode-keys vi
@@ -125,4 +57,10 @@ bind % split-window -h -c "#{pane_current_path}"
 set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+
+run-shell ~/.config/tmux/plugins/tmux-sensible/sensible.tmux
+run-shell ~/.config/tmux/plugins/vim-tmux-navigator/vim-tmux-navigator.tmux
+run-shell ~/.config/tmux/plugins/tmux-yank/yank.tmux
+run-shell ~/.config/tmux/plugins/tmux-resurrect/resurrect.tmux
+run-shell ~/.config/tmux/plugins/tmux-continuum/continuum.tmux
+run-shell ~/.config/tmux/plugins/tmux/rose-pine.tmux
